# container-data-aug

./: .gitignore  docker-compose.yml  readme.md
.agents/skills/grill-me/: SKILL.md
apps/backend/: pyproject.toml  requirements.txt
apps/frontend/: pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: augmentation_tasks.py  health.py  local_folders.py  projects.py  runtime_models.py
backend/app/augmentation/: glm_ocr.py  shuffle.py
backend/app/core/: config.py  errors.py
backend/app/repositories/: _mappers.py  json_store.py  postgres.py  projects_repo.py  tasks_repo.py
backend/app/schemas/: augmentation_tasks.py  base.py  errors.py  local_folders.py  projects.py  runtime_models.py
backend/app/services/: augmentation_service.py  folder_scanner.py  project_service.py
backend/db/: init.sql
backend/tests/: conftest.py  test_api.py  test_glm_ocr_transformers.py  test_shuffle_glm.py  test_shuffle_selection.py
docs/: API-MVP-spec.md  ERD_MVP_spec.md  augmentation-flow-spec.md  back-db-spec.md  backend-MVP-design-decisions.ko.md  frontend-layout-spec.md  glm-ocr-transformers-plan.ko.md  shuffle-flow-integration-plan.ko.md
docs/archive/: API-spec.md  ERD_spec.md  augmentation-flow-spec.md
frontend/: .env.example  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: app-shell.tsx  augmentation-options-dialog.tsx  connection-banner.tsx  model-preparation-dialog.tsx  project-sidebar.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/types/: api.ts  project.ts
(+13 files in other folders)
