[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.3",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
